--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -25,12 +25,17 @@
   box-sizing: border-box;
 }
 
+
+
 body {
   font-family: "Helvetica Neue", Arial, sans-serif;
   background-color: var(--background-color);
   color: var(--font-color);
   display: flex;
   flex-direction: column;  
+  overflow-x: auto;
+  height: 100%;
+  width: 100%;
 }
 
 .container-index {
@@ -38,7 +43,9 @@ body {
   display: flex;
   position: absolute;
   top: 100px;
-  height: 1000px;
+  min-height: 1000px;
+  min-width: 1680px;
+  overflow: auto;
 }
 
 .container-auth {
