プロンプト修正とGoogle Mapの情報ウインドウの表示内容変更

--- a/app/assets/stylesheets/_right_side.scss
+++ b/app/assets/stylesheets/_right_side.scss
@@ -9,7 +9,7 @@
 .map-container {
   padding: 20px; /* 余白のサイズを指定 */
   width: 90%;
-  height: 65%;
+  height: 675px;
   display: flex;
   justify-content: center;
   align-items: center;
