--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -85,7 +85,7 @@
   display: flex;
   align-items: center;
   margin: 0 20px;
-  height: 50px;
+  height: 52px;
   white-space: nowrap;
 }
 
@@ -161,6 +161,7 @@
   border: none;
   font-size: 16px;
   padding: 0 4px;
+  background-color: var(--background-color);
   &:hover {
     color: var( --hover-color);
   }
