--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons", media: "all", rel: "stylesheet" %>
-    <%= stylesheet_link_tag "https://use.fontawesome.com/releases/v5.15.4/css/all.css" %>
+    <script src="https://kit.fontawesome.com/776a34808a.js" crossorigin="anonymous"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'google_maps' %>
     <%= javascript_pack_tag 'dark_mode', 'data-turbolinks-track': 'reload' %>
@@ -38,9 +38,10 @@
             <% end %>
           </div>
           <div id="dark-mode-toggle">
-            <span class="dark-text"><%= t(:dark_mode) %></span>
-            <span class="light-text"><%= t(:light_mode) %></span>
-          </div>
+            <span class="dark-text"><i class="far fa-moon icon"></i><%= t(:dark_mode) %></span>
+            <span class="light-text"><i class="fas fa-sun icon"></i><%= t(:light_mode) %></span>
+        </div>
+        
           <% if user_signed_in? %>
             <li><%= link_to t(:logout), destroy_user_session_path, method: :delete %></li>
           <% else %>
