--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -34,7 +34,7 @@
   align-items: right;
 }
 
-// Search form styles
+// 検索窓
 .search-form {
   display: flex;
   align-items: center;
@@ -73,7 +73,7 @@
 }
 
 
-/* header nav */
+/* header-nav */
 
 .header-nav ul {
   display: flex;
@@ -117,13 +117,11 @@
 .dark-text {
   position: absolute;
   z-index: 1;
-  /* other styles */
 }
 
 .light-text {
   position: absolute;
   z-index: 2;
-  /* other styles */
 }
 
 .icon {
@@ -169,7 +167,6 @@
 
 .language-switcher {
   margin: auto 12px auto 0 ;
-
 }
 
 .language-select {
