--- a/app/assets/stylesheets/_right_side.scss
+++ b/app/assets/stylesheets/_right_side.scss
@@ -3,25 +3,23 @@
     width: 40%;
     position: relative;
     z-index: 0;
-    
   }
 
 .map-container {
-  padding: 20px; /* 余白のサイズを指定 */
+  padding: 20px;
   width: 90%;
   height: 675px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-
 }  
   
 #map {
   position: absolute;
   top: 30px;
   left: 30px;
-  height: 100%; /* 地図の高さを指定 */
-  width: calc(100% - 40px); /* 幅を親要素から余白を差し引いた値に指定 */
+  height: 100%;
+  width: calc(100% - 40px);
   border-radius: 10px;
 }
