--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -2,7 +2,7 @@
     --background-color-dark-mode: rgb(37, 38, 46);
     --background-border_style-dark-mode: 1px solid #1e3b1f;
     --font-color-dark-mode: #f4f4f4;;
-    --input-background-color-dark-mode: rgba(34, 34, 36, 0.9);
+    --input-background-color-dark-mode: rgba(41, 41, 43, 0.9);
 }
 
 body.dark-mode {
@@ -16,6 +16,7 @@ body.dark-mode {
   }
   
   body.dark-mode .select-control {
+    border-color: rgba(87, 81, 81, 0.5);
     background-color: rgba(87, 81, 81, 0.5);
     color: white;
   }
@@ -24,7 +25,6 @@ body.dark-mode {
     border-color: rgba(87, 81, 81, 0.5);
     background-color: rgb(77, 64, 64);
     color: white;
-  
   }
   
   body.dark-mode .form-control:focus,
@@ -43,7 +43,6 @@ body.dark-mode {
   body.dark-mode .form-control:-webkit-autofill {
     -webkit-text-fill-color: white !important;
     transition: background-color 5000s ease-in-out 0s;
-
   }
 
   
@@ -105,7 +104,6 @@ body.dark-mode {
     border-right: var(--background-border_style-dark-mode);
   }
   
-  
   body.dark-mode .footer {
     background-color: var(--secondary-background-color-dark-mode);
     padding: 20px 0;
@@ -117,7 +115,6 @@ body.dark-mode {
     color: var(--font-color-dark-mode);
     text-decoration: none;
   }
-  
 
   body.dark-mode #dark-mode-toggle {
     margin: 0 auto;
