--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -84,7 +84,7 @@
   display: flex;
   align-items: center;
   margin: 0 20px;
-  height: 50px;
+  height: var(--headerbottom-height);
   white-space: nowrap;
 }
 
