Topページ、ヒーロー文章変更

--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -8,8 +8,8 @@
         </div>
         <div class="feature-item">
             <div class="middle-right">
-                <h3><%= t(:create_customized_plan_title) %></h3>
-                <p><%= t(:create_customized_plan_description) %></p>
+                <h3><%= t(:googlemap) %></h3>
+                <p><%= t(:googlemap_description) %></p>
             </div>
         </div>
         <div class="feature-item">
