--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -8,7 +8,7 @@
   <%# end %>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "パスワードを忘れた場合", new_password_path(resource_name) %><br />
+    <%= link_to t(:reset_password), new_password_path(resource_name) %><br />
   <% end %>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
