--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
               <%= form_tag(switch_language_path, method: :post, id: 'language-form') do %>
                 <div class="language-select-container">
                   <i class="fas fa-globe icon"></i>
-                  <%= select_tag(:locale, options_for_select([[t(:japanese), 'ja'], [t(:english), 'en']], I18n.locale), onchange: "document.getElementById('language-form').submit();", class: 'language-select') %>
+                  <%= select_tag(:locale, options_for_select([[t(:japanese), 'ja'], [t(:english), 'en'], [t(:chinese), 'zh-CN']], I18n.locale), onchange: "document.getElementById('language-form').submit();", class: 'language-select') %>
                 </div>
               <% end %>
             </li>
