--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -44,7 +44,7 @@ body.dark-mode {
     }  
   }
   
-  body.dark-mode .plan-input {
+  body.dark-mode .input {
     background-color: var(--input-background-color-dark-mode);
     border: 1px solid var(--background-border_style-dark-mode);
   }
