--- a/app/assets/stylesheets/_input_form.scss
+++ b/app/assets/stylesheets/_input_form.scss
@@ -9,7 +9,7 @@
   }
 }
 
-.plan-input {
+.input {
     animation: slideInFromTop 0.8s ease-out;
     flex-shrink: 0;
     width: 400px;
@@ -124,7 +124,7 @@ display: none;
 }
 
 #budget-input {
-  display: none;
+
   padding-top: 10px;
 }
 
