--- a/app/assets/stylesheets/_hotel_input.scss
+++ b/app/assets/stylesheets/_hotel_input.scss
@@ -1,5 +1,6 @@
 @import 'flatpickr/dist/flatpickr.min';
 
+//カレンダー
 .flatpickr-calendar {
    border: var(--border-style) ;
 }
@@ -19,3 +20,71 @@ body.dark-mode .flatpickr-calendar {
  body.dark-mode  .flatpickr-day {
     color: white;
  }
+
+// スライダー
+.budget-input {
+    margin-top: 8px;
+}
+
+#budget-slider {
+    margin-right: 8px;
+    height: 10px;
+    width: 330px;
+    border: var(--border-style);
+    border-radius: 5px;
+}
+
+#budget-slider {
+    margin-right: 8px;
+    height: 10px;
+    width: 330px;
+    border: var(--border-style);
+    border-radius: 5px;
+}
+
+.slider-value-container {
+    margin: 16px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.price_per_night {
+    display: flex;
+    align-items: center;  
+}
+
+.currency {
+    display: flex;
+    align-items: center;
+}
+
+  
+#budget-slider-value {
+    display: inline-block;
+    width: 160px;
+    text-align: right;
+    margin: 10px;
+    font-size: 20px;
+    white-space: nowrap;
+}
+
+#budget-slider .noUi-connect {
+    background:  var(--primary-color);
+}
+
+#budget-slider .noUi-handle {
+    height: 20px;
+    width: 20px;
+    top: -5px;
+    right: -9px; /* half the width */
+    border-radius: 9px;
+    background-color: var(--primary-color);
+}
+
+#budget-slider .noUi-handle::before {
+    display: none;
+}
+
+#budget-slider .noUi-handle::after {
+    display: none;
+}
