--- a/app/views/layouts/_hotel_input.html.erb
+++ b/app/views/layouts/_hotel_input.html.erb
@@ -1,4 +1,5 @@
 <div class="input">
+    <%= "※作成中" %>
     <h2 class="cursor-pointer"><%= t(:provide_your_hotel_preferences) %></h2>
     <%= form_with model: @plan, url: open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
       <div class="form-group">
