--- a/app/views/layouts/_hotel_input.html.erb
+++ b/app/views/layouts/_hotel_input.html.erb
@@ -3,7 +3,7 @@
     <h2 class="cursor-pointer"><%= t(:provide_your_hotel_preferences) %></h2>
     <%= form_with model: @plan, url: open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
       <div class="form-group">
-        <%= form.text_field :destination, placeholder: t(:destination), class: 'form-control', id: 'destination-input' %>
+        <%= form.text_field :destination, placeholder: t(:destination), class: 'form-control', id: 'destination-hotel-input' %>
       </div>
 
       <div class="form-group">
