--- a/app/assets/stylesheets/_input_form.scss
+++ b/app/assets/stylesheets/_input_form.scss
@@ -130,7 +130,7 @@ opacity: 1;
   border-radius: 5px;
 }
 
-#day-slider-value {
+#day-slider-display {
   display: inline-block;
   width: 1em; /* 2桁分の幅を確保 */
   text-align: right;
