--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -8,13 +8,13 @@
       <%= form.text_field :place_to_visit, placeholder: t(:place_to_visit), class: 'form-control' %>
     </div>
     <div class="form-group">
+      <%= form.hidden_field :duration, id: "day-slider-value" %>
       <div class="slider-wrapper">
         <%#= form.label :duration, t(:duration) %>
         <div id="day-slider" data-min="1" data-max="7" data-value="1"></div>
-        <span id="day-slider-value">1</span> 
+        <span id="day-slider-display">1</span> 
         <%= t(:days) %>
       </div>
-      
     </div>
 
     <div class="form-group">
