--- a/app/views/inspirations/index.html.erb
+++ b/app/views/inspirations/index.html.erb
@@ -10,6 +10,7 @@
         <div class="prompt-area">
           <div class="form-group">
             <%= form.text_field :place, placeholder: t(:place_input_placeholder), class: "form-control" %>
+            <i class="fas fa-times delete_icon"></i>
           </div>
         </div>
         <div class="prompt">
