--- a/app/views/layouts/_hotel_input.html.erb
+++ b/app/views/layouts/_hotel_input.html.erb
@@ -4,11 +4,13 @@
     <%= form_with model: @plan, url: open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
       <div class="form-group">
         <%= form.text_field :destination, placeholder: t(:destination), class: 'form-control', id: 'destination-hotel-input' %>
-      </div>
+        <i class="fas fa-times delete_icon"></i>
+    </div>
 
       <div class="form-group">
         <%= form.text_field :date, placeholder: t(:calender), class: 'datepicker form-control', readonly: "" %>
-      </div>
+        <i class="fas fa-times delete_icon"></i>
+    </div>
 
       <div class="form-group">
         <%#= form.check_box :budget_option, { checked: true }, class: 'budget-option', id: 'budget-option' %>
