--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -3,9 +3,11 @@
   <%= form_with model: @plan, url: open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
     <div class="form-group">
       <%= form.text_field :destination, placeholder: t(:destination) ,class: 'form-control', id: 'destination-input' %>
+      <i class="fas fa-times delete_icon"></i>
     </div>
     <div class="form-group">
       <%= form.text_field :place_to_visit, placeholder: t(:place_to_visit), class: 'form-control' %>
+      <i class="fas fa-times delete_icon"></i>
     </div>
     <div class="form-group">
       <%= form.hidden_field :duration, id: "day-slider-value" %>
