--- a/app/assets/stylesheets/_right_side.scss
+++ b/app/assets/stylesheets/_right_side.scss
@@ -4,6 +4,7 @@
     margin-right: 36px;
     position: relative;
     z-index: 0;
+    display: none;
   }
 
 .map-container {
@@ -14,6 +15,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  display: none;
 }  
   
 #map {
@@ -23,4 +25,5 @@
   height: 100%;
   width: 100%;
   border-radius: 10px;
+  display: none;
 }
