--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -15,7 +15,7 @@
         <%#= form.label :duration, t(:duration) %>
         <div id="day-slider" data-min="1" data-max="7" data-value="1"></div>
         <span id="day-slider-display">1</span> 
-        <%= t(:days) %>
+        <span class="days-text"><%= t(:days) %></span>
       </div>
     </div>
 
