--- a/app/assets/stylesheets/_responsive.css
+++ b/app/assets/stylesheets/_responsive.css
@@ -22,21 +22,30 @@
   }
 
   .generated-plan-container {
+    position: absolute!important;
+    top: 450px!important;
+    left: 0!important;
+    z-index: 0!important;
+  }
+
+  .right-side-container {
+    display: block;
+    width: 100%!important;
+    height: 400px!important;
+  }
+
+  .map-container {
+    width: 100%!important;
+    height: 100%!important;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 0;
   }
 
-  .right-side-container {
-    display: block;
-  }
-
-  .map-container {
-    display: block;
-  }
-
   #map {
+    width: 100%!important;
+    height: 100%!important;
     display: block;
   }
     
