--- a/app/assets/stylesheets/_responsive.css
+++ b/app/assets/stylesheets/_responsive.css
@@ -23,13 +23,14 @@
 
   .generated-plan-container {
     position: absolute!important;
-    top: 450px!important;
+    top: 430px!important;
     left: 0!important;
     z-index: 0!important;
   }
 
   .right-side-container {
     display: block;
+    margin-right: 0px!important;
     width: 100%!important;
     height: 400px!important;
   }
@@ -44,9 +45,15 @@
   }
 
   #map {
-    width: 100%!important;
+    width: 90%!important;
     height: 100%!important;
     display: block;
+    position: absolute!important;
+    top: 30px!important;
+    left: 30px!important;
+    height: 86%!important;
+    width: 86%!important;
+    border-radius: 10px!important;
   }
     
   .header-logo a {
