--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -157,7 +157,9 @@ body.dark-mode {
     border: none;
     border-radius: 12px;
     cursor: pointer;
+    white-space: nowrap;
   }
+
 
   body.dark-mode #dark-mode-toggle:hover {
     color: var(--hover-color-dark-mode);
